@@ -10,6 +10,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to Martin Stricker - martinstricker
 - bug #2186823 [core] bad session.save_path not detected
 - bug #2202709 [core] Re-login causes PMA to forget current table name 
+- bug #2280904 [export] do not include view name in export
 
 3.1.0.0 (not yet released)
 + [auth] Support for Swekey hardware authentication,
